--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,6 @@
     "isolatedModules": true,
     "types": ["vite/client"]
   },
-  "include": ["src"],
+  "include": ["src", "index.d.ts"],
   "exclude": ["node_modules"]
 }
