--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "typesDir/*": ["typesDir/*"]
     },
     "module": "ESNext",
     "target": "ESNext",
@@ -14,6 +15,6 @@
     "isolatedModules": true,
     "types": ["vite/client"]
   },
-  "include": ["src", "index.d.ts"],
+  "include": ["src", "index.d.ts", "typesDir"],
   "exclude": ["node_modules"]
 }
