--- a/package.json
+++ b/package.json
@@ -58,5 +58,23 @@
     "typescript": "~5.8.0",
     "typescript-eslint": "~8.34.0",
     "vite": "^6.2.4"
+  },
+  "engines": {
+    "node": "^22.17.0",
+    "npm": "^11.4.2"
+  },
+  "os": [
+    "darwin",
+    "linux"
+  ],
+  "devEngines": {
+    "runtime": {
+      "name": "node",
+      "onFail": "error"
+    },
+    "packageManager": {
+      "name": "npm",
+      "onFail": "error"
+    }
   }
 }
