--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@maikovskii-danil/ui-framework-vue",
-  "version": "2.1.0-alpha.1",
+  "version": "2.1.0",
   "prettier": "@maikovskii-danil/prettier-config-vue",
   "type": "module",
   "license": "MIT",
