--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "url": "git+https://github.com/maikovskii-danil/ui-framework-vue.git"
   },
   "scripts": {
+    "generate": "node scripts/generate-index.cjs",
     "cleanInstall": "npm clean-install --fund false --audit false",
-    "prepackage:build": "npm run cleanInstall",
+    "prepackage:build": "run-s cleanInstall generate",
     "package:build": "vite build --config ./configs/vite.config.ts",
     "prelint": "npm run cleanInstall",
     "lint": "npm run lintOnly",
