--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "skipLibCheck": true,
     "types": ["vite/client", "histoire"]
   },
   "include": ["src", "index.d.ts", "typesDir"],
