--- a/package.json
+++ b/package.json
@@ -39,6 +39,12 @@
     "story:preview": "histoire preview --config ./configs/histoire.config.ts --port 5176",
     "prepare": "husky configs/.husky"
   },
+  "lint-staged": {
+    "*.{ts,js,vue}": [
+      "npm run lintOnly",
+      "npm run prettierCheck"
+    ]
+  },
   "peerDependencies": {
     "@vueuse/core": "^13.2.0",
     "tailwindcss": "^4.1.11",
@@ -56,6 +62,7 @@
     "globals": "~16.2.0",
     "histoire": "^1.0.0-alpha.2",
     "husky": "^9.1.7",
+    "lint-staged": "^16.1.2",
     "npm-run-all2": "^8.0.4",
     "prettier": "^3.5.3",
     "tailwindcss": "^4.1.11",
